[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/page25-26/bg_page.webp" type="Texture" id=1]
[ext_resource path="res://assets/page25-26/Parrot1.webp" type="Texture" id=2]
[ext_resource path="res://assets/page25-26/Parrot2.webp" type="Texture" id=3]
[ext_resource path="res://assets/page25-26/Linda1.webp" type="Texture" id=4]
[ext_resource path="res://assets/page25-26/Parrot3.webp" type="Texture" id=5]
[ext_resource path="res://assets/page25-26/Linda3.webp" type="Texture" id=6]
[ext_resource path="res://assets/page25-26/Linda2.webp" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Lato-Medium.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://components/GUI/GUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/ADLA/page25-26.gd" type="Script" id=10]
[ext_resource path="res://assets/general/pointer_start.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 33
font_data = ExtResource( 8 )

[node name="Page25-26" type="Node2D"]
script = ExtResource( 10 )

[node name="BackgroundImage" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="AnimatedLinda" type="AnimatedSprite" parent="."]
position = Vector2( 482, 601 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
frame = 2
speed_scale = 0.8
playing = true

[node name="AnimatedAri" type="AnimatedSprite" parent="."]
position = Vector2( 1680, 246 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
frame = 2
speed_scale = 0.8
playing = true

[node name="Label" type="Label" parent="."]
margin_left = 930.0
margin_top = 328.0
margin_right = 1788.0
margin_bottom = 962.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Al poco rato, el ruido
de la sierra, el tronco
quebrándose y el repentino
ataque de histeria de Ari cedieron
paso a un silencio absoluto: la motosierra
se había roto y el árbol permanecía en pie. A Ari le bastaron
unos segundos para reponerse de lo sucedido y exclamar:

—Linda, ¡manos a la obra! No hay tiempo que perder,
tenemos muchas vidas que salvar.

—¿Salvar vidas? —preguntó Linda un poco confundida."

[node name="ButtonModalLinda" type="Button" parent="."]
margin_left = 614.0
margin_top = 907.0
margin_right = 694.0
margin_bottom = 987.0
mouse_default_cursor_shape = 2
icon = ExtResource( 11 )
flat = true
expand_icon = true

[node name="GUI" parent="." instance=ExtResource( 9 )]

[connection signal="tree_entered" from="." to="." method="_on_Page2526_tree_entered"]
[connection signal="mouse_entered" from="ButtonModalLinda" to="." method="_on_ButtonModalLinda_mouse_entered"]
[connection signal="mouse_exited" from="ButtonModalLinda" to="." method="_on_ButtonModalLinda_mouse_exited"]
[connection signal="pressed" from="ButtonModalLinda" to="." method="_on_ButtonModalLinda_pressed"]
